# blew

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  mise.toml
crates/blew/: Cargo.toml  README.md  build.rs
crates/blew/android/: build.gradle.kts
crates/blew/android/src/main/: AndroidManifest.xml
crates/blew/android/src/main/java/org/jakebot/blew/: BleCentralManager.kt  BlewPlugin.kt  GattOperationQueue.kt
crates/blew/examples/: advertise.rs  integration_central.rs  integration_peripheral.rs  l2cap_client.rs  l2cap_server.rs  restore.rs  scan.rs
crates/blew/src/: error.rs  lib.rs  testing.rs  types.rs
crates/blew/src/central/: backend.rs  mod.rs  types.rs
crates/blew/src/gatt/: mod.rs  props.rs  service.rs
crates/blew/src/l2cap/: mod.rs  types.rs
crates/blew/src/peripheral/: backend.rs  mod.rs  types.rs
crates/blew/src/platform/: mod.rs
crates/blew/src/platform/android/: central.rs  jni_globals.rs  jni_hooks.rs  l2cap_state.rs  mod.rs  peripheral.rs
crates/blew/src/platform/apple/: central.rs  helpers.rs  l2cap.rs  mod.rs  peripheral.rs
crates/blew/src/platform/linux/: central.rs  l2cap.rs  mod.rs  peripheral.rs
crates/blew/src/util/: event_fanout.rs  event_stream.rs  mod.rs  request_map.rs
crates/blew/tests/: central_config.rs  jni_parity.rs  wait_ready.rs
crates/tauri-plugin-blew/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-blew/android/: build.gradle.kts
crates/tauri-plugin-blew/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-blew/android/src/main/java/org/jakebot/blew/: BleCentralManager.kt  BlePeripheralManager.kt  BlewPlugin.kt
crates/tauri-plugin-blew/src/: lib.rs
docs/: android-without-tauri.md  platform-notes.md
docs/superpowers/plans/: 2026-04-16-blew-architectural-overhaul.md
